# kbc

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README.md  configure.ac
.tx/: config
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_subdir_to_include.m4  kbc_qt.m4
contrib/: README.md  bitcoin-qt.pro  kbcd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.install  bitcoin-qt.protocol  bitcoin-tx.install  bitcoind.bash-completion  bitcoind.lintian-overrides  changelog  control  copyright  kbc-qt.desktop  kbc-qt.lintian-overrides  kbcd.examples  kbcd.install  kbcd.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  bitcoind.service  kbcd.conf  kbcd.openrc  kbcd.openrcconf
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: DS_Store  README.md  background.psd  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.10.3.md  release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.20.2.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  (+12 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  crypter.h  db.h  eccryptoverify.h  ecwrapper.h  hash.h  init.cpp  init.h  kbc-cli.cpp  kbc-tx.cpp  kbcd-res.rc  kbcd.cpp  (+57 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  kbc.cpp  kbc.qrc  kbc_locale.qrc  kbcaddressvalidator.h  kbcamountfield.h  kbcgui.cpp  kbcgui.h  kbcstrings.cpp  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  (+49 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_cmn.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_eo.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_fa_IR.ts  bitcoin_fr_CA.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_mn.ts  bitcoin_ms_MY.ts  bitcoin_pam.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_ro_RO.ts  bitcoin_sah.ts  bitcoin_tr.ts  bitcoin_uk.ts  bitcoin_zh_CN.ts  kbc_ach.ts  kbc_af_ZA.ts  kbc_ar.ts  kbc_be_BY.ts  kbc_ca@valencia.ts  kbc_ca_ES.ts  kbc_cs.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: bitcoin.icns  kbc.icns
src/qt/test/: paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  kbcconsensus.cpp  kbcconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_kbc_NativeSecp256k1.c  org_kbc_NativeSecp256k1.h
src/secp256k1/src/java/org/kbc/: NativeSecp256k1.java
src/test/: README.md  base58_tests.cpp  bignum.h  bip32_tests.cpp  bitcoin-util-test.py  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_tests.cpp  test_bitcoin.cpp  wallet_tests.cpp
src/test/data/: README.md  bitcoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+53 files in other folders)
